--- a/projects-django/project1/project1/template/miPlantilla.html
+++ b/projects-django/project1/project1/template/miPlantilla.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <h1>Hola, alumnos! Estos viendo la primera plantilla</h1>
+    <h1 style="color: red">Hola, alumnos! Estás viendo la primera plantilla</h1>
 </body>
 
 </html>
