Added new pharagraphs where appear the name, surname and date

--- a/projects-django/project1/project1/template/miPlantilla.html
+++ b/projects-django/project1/project1/template/miPlantilla.html
@@ -1,7 +1,9 @@
 <html>
 
 <body>
-    <h1 style="color: red">Hola, alumnos! Estás viendo la primera plantilla</h1>
+    <h1 style="color: red">Hola, alumnos! Est&aacute;s viendo la primera plantilla</h1>
+    <p>Mi nombre y apellido es: {{nombre}} {{apellido}}</p>
+    <p>La fecha actual es: {{fecha_actual.day}} / {{fecha_actual.month}} / {{fecha_actual.year}}</p>
 </body>
 
 </html>
