--- a/projects-django/project1/project1/templates/miPlantilla.html
+++ b/projects-django/project1/project1/templates/miPlantilla.html
@@ -1,6 +1,7 @@
 <html>
 
 <body>
+        {% include "barra_navegacion.html" %}
     <h1 style="color: red">Hola, alumnos! Est&aacute;s viendo la primera plantilla</h1>
     <h2>
         {# IGNORAR ESTE CONDICIONAL #}
@@ -21,8 +22,8 @@
     <p>
     <ul>
         {% if temas %}
-            {% for i in temas%}
-                <li>{{i|first|lower}}</li>
+            {% for tema in temas%}
+                <li>{{tema|first|lower}}</li>
             {% endfor %}
         {% else %}
             <p>No hay elementos que mostrar.</p>
