Added the template 'barra_navegacion.html'

--- a/projects-django/project1/project1/templates/base.html
+++ b/projects-django/project1/project1/templates/base.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 style="background-color: darkblue; color: white; text-align:center">Cursos de Píldoras Informáticas</h1>
+    {% include "barra_navegacion.html" %}
     <h3>Curso de programación web</h3>
 
     {% block content %} {% endblock %}
