templates extend 'base.html'

--- a/projects-django/professional_web/professional_web_app/templates/professional_web_app/career.html
+++ b/projects-django/professional_web/professional_web_app/templates/professional_web_app/career.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    CAREER
-</body>
-</html>
+{% extends "professional_web_app/base.html" %}
+
+{% load static %}
+
+{% block content %}
+<!-- Contenido -->
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <main class="px-3">
+        <h1>Career</h1>
+        <p class="lead">Page NOT available.</p>
+    </main>
+</div>
+{% endblock %}
