--- a/projects-django/professional_web/professional_web_app/templates/professional_web_app/home.html
+++ b/projects-django/professional_web/professional_web_app/templates/professional_web_app/home.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    HOME
-</body>
-</html>
+{% extends "professional_web_app/base.html" %}
+
+{% load static %}
+
+{% block content %}
+<!-- Contenido -->
+<div><p></p></div>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <main class="px-3">
+    <h1>Cover your page.</h1>
+    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
+      text, and add your own fullscreen background photo to make it your own.</p>
+    <p class="lead">
+      <a href="{% url 'Career' %}" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+    </p>
+  </main>
+</div>
+{% endblock %}
