--- a/projects-django/professional_web/professional_web_app/templates/professional_web_app/base.html
+++ b/projects-django/professional_web/professional_web_app/templates/professional_web_app/base.html
@@ -22,6 +22,7 @@
   <!-- Styles -->
   <link href="{% static 'css/cover.css' %}" rel="stylesheet">
   <link href="{% static 'css/footer.css' %}" rel="stylesheet">
+  <link href="{% static 'css/gestion.css' %}" rel="stylesheet">
 
 </head>
 
