--- a/projects-django/professional_web/professional_web_app/static/css/gestion.css
+++ b/projects-django/professional_web/professional_web_app/static/css/gestion.css
@@ -277,3 +277,12 @@ ul.errorlist{
   font-style: italic;
   color: red;
 }
+
+.linksCategories{
+  color: white !important;
+  text-decoration: underline !important;
+}
+
+.linksCategories:hover{
+  text-decoration: none !important;
+}
