Created a contact form

--- a/projects-django/professional_web/contactoapp/templates/contacto/contact.html
+++ b/projects-django/professional_web/contactoapp/templates/contacto/contact.html
@@ -8,6 +8,7 @@
     <main class="px-3">
         <h1>Contact</h1>
         <p class="lead">Page NOT available.</p>
+        <p>{{form}}</p>
     </main>
 </div>
 {% endblock %}
